<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".EditorActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/marginLarge">

        <TextView
            android:id="@+id/tv_fill_in_fields"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/marginLarge"
            android:text="@string/editor_fill_in_fields"
            android:textColor="@color/colorText"
            android:textSize="@dimen/textSize"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            style="@style/EditorCategory"
            android:text="@string/editor_category_book"
            app:layout_constraintBottom_toBottomOf="@+id/et_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/et_title" />

        <TextView
            android:id="@+id/tv_supplier"
            style="@style/EditorCategory"
            android:text="@string/editor_category_supplier"
            app:layout_constraintBottom_toBottomOf="@+id/et_supplier"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/et_supplier" />

        <EditText
            android:id="@+id/et_title"
            style="@style/EditorEditText"
            android:layout_marginStart="@dimen/marginExtraLarge"
            android:hint="@string/et_title_hint"
            android:inputType="textCapWords"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_supplier"
            app:layout_constraintTop_toBottomOf="@+id/tv_fill_in_fields" />

        <EditText
            android:id="@+id/et_author"
            style="@style/EditorEditText"
            android:hint="@string/et_author_hint"
            android:inputType="textPersonName|textCapWords"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/et_title"
            app:layout_constraintTop_toBottomOf="@+id/et_title" />

        <EditText
            android:id="@+id/et_price"
            style="@style/EditorEditText"
            android:hint="@string/et_price_hint"
            android:inputType="numberDecimal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/et_author"
            app:layout_constraintTop_toBottomOf="@+id/et_author" />

        <Button
            android:id="@+id/btn_decrease"
            style="@style/EditorQuantityButton"
            android:text="@string/btn_decrease_text"
            app:layout_constraintStart_toStartOf="@+id/et_price"
            app:layout_constraintTop_toBottomOf="@+id/et_price" />

        <Button
            android:id="@+id/btn_increase"
            style="@style/EditorQuantityButton"
            android:text="@string/btn_increase_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_price" />

        <EditText
            android:id="@+id/et_edit_quantity"
            style="@style/EditorEditText"
            android:layout_marginEnd="@dimen/marginMedium"
            android:layout_marginStart="@dimen/marginMedium"
            android:hint="@string/et_quantity_hint"
            android:inputType="number"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="@+id/btn_decrease"
            app:layout_constraintEnd_toStartOf="@+id/btn_increase"
            app:layout_constraintStart_toEndOf="@id/btn_decrease"
            app:layout_constraintTop_toTopOf="@+id/btn_decrease" />

        <EditText
            android:id="@+id/et_supplier"
            style="@style/EditorEditText"
            android:hint="@string/et_supplier_hint"
            android:inputType="textCapWords"
            app:layout_constraintBottom_toTopOf="@+id/et_phone_number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/et_price"
            app:layout_constraintTop_toBottomOf="@+id/btn_decrease" />

        <EditText
            android:id="@+id/et_phone_number"
            style="@style/EditorEditText"
            android:hint="@string/et_phone_number_hint"
            android:inputType="phone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/et_supplier"
            app:layout_constraintTop_toBottomOf="@id/et_supplier" />

        <Button
            android:id="@+id/btn_order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimary"
            android:drawablePadding="@dimen/marginMedium"
            android:drawableStart="@drawable/ic_phone"
            android:padding="@dimen/marginLarge"
            android:text="@string/btn_order_text"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_phone_number" />

    </android.support.constraint.ConstraintLayout>
</ScrollView>